--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/d3": "^4.13.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "d3": "^4.13.0",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.0-rc.1",
     "rxjs": "^6.0.0",
