--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "multilinegraph",
   "version": "0.0.0",
+  "main": "server.js",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --aot -prod"
+    "postinstall": "ng build --aot -prod"
+  },
+  "engines": {
+    "node": "~10.7.0",
+    "npm": "~5.6.0"
   },
   "private": true,
   "dependencies": {
