--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
-  },
-  "engines": {
-    "node": "~10.7.0",
-    "npm": "~5.6.0"
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
