--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.1.2",
     "@angular/cli": "~6.0.8",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
@@ -24,10 +24,13 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@swimlane/ngx-charts": "^9.0.0",
     "@types/d3": "^4.13.0",
+    "@types/d3-tip": "^3.5.5",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "d3": "^4.13.0",
+    "d3-tip": "^0.9.1",
     "express": "^4.16.3",
     "path": "^0.12.7",
     "primeicons": "^1.0.0-beta.10",
