--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/d3": "^4.13.0",
     "@types/d3-tip": "^3.5.5",
     "chart.js": "^2.7.2",
+    "chart.piecelabel.js": "^0.14.1",
     "core-js": "^2.5.4",
     "d3": "^4.13.0",
     "d3-tip": "^0.9.1",
